lib/tools/orbit/test_output/rewrite_patterns.output
QStandardPaths: wrong permissions on runtime directory /run/user/1000/, 0755 instead of 0700
Flow compiler (3rd generation)

Processing 'orbit' on http server
done in 0.13s

tests/rewrite_patterns.orb: tests/rewrite_patterns.orb:10:5: Parse error
    }
    ^
app->exec() == 1
